sandbox/geos/fp_geos_c.h

/**
* Type returned by GEOS_init_r(), for use with the functions ending in `_r`
* (the reentrant API).
*
* Contexts must only be used from a single thread at a time.
*/
typedef struct GEOSContextHandle_HS *GEOSContextHandle_t;
/**
* The generic type for a geometry. A geometry can be a Point, LineString, Polygon,
* MultiPoint, MultiLineString, MultiPolygon, or GeometryCollection.
* The geometry type can be read with \ref GEOSGeomTypeId. Most functions
* in GEOS have `GEOSGeometry *` as either a parameter or a return type.
* \see GEOSGeom_createPoint
* \see GEOSGeom_createLineString
* \see GEOSGeom_createPolygon
* \see GEOSGeom_createCollection
* \see GEOSGeom_destroy
*/
typedef struct GEOSGeom_t GEOSGeometry;
/**
* Prepared geometry type.
* \see GEOSPrepare()
* \see GEOSPreparedGeom_destroy()
*/
typedef struct GEOSPrepGeom_t GEOSPreparedGeometry;
/**
* Coordinate sequence type representing fixed-size lists of coordinates.
* Contains the list of vertices defining the location of a \ref GEOSGeometry.
* \see GEOSCoordSeq_create()
* \see GEOSCoordSeq_destroy()
*/
typedef struct GEOSCoordSeq_t GEOSCoordSequence;
/* ========== Interruption ========== */

/**
* Callback function for use in interruption. The callback will be invoked _before_ checking for
* interruption, so can be used to request it.
*
* \see GEOS_interruptRegisterCallback
* \see GEOS_interruptRequest
* \see GEOS_interruptCancel
*/
typedef void (GEOSInterruptCallback)(void);
/* ========= Topology Operations ========= */

/** \see GEOSEnvelope */
extern GEOSGeometry  *GEOSEnvelope_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSIntersection */
extern GEOSGeometry  *GEOSIntersection_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSIntersectionPrec */
extern GEOSGeometry  *GEOSIntersectionPrec_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double gridSize);
/** \see GEOSConvexHull */
extern GEOSGeometry  *GEOSConvexHull_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSConcaveHull */
extern GEOSGeometry  *GEOSConcaveHull_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double ratio,
    unsigned int allowHoles);
/** \see GEOSConcaveHullByLength */
extern GEOSGeometry  *GEOSConcaveHullByLength_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double ratio,
    unsigned int allowHoles);
/** \see GEOSPolygonHullSimplify */
extern GEOSGeometry  *GEOSPolygonHullSimplify_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    unsigned int isOuter,
    double vertexNumFraction);
/** \see GEOSPolygonHullSimplifyMode */
extern GEOSGeometry  *GEOSPolygonHullSimplifyMode_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    unsigned int isOuter,
    unsigned int parameterMode,
    double parameter);
/** \see GEOSConcaveHullOfPolygons */
extern GEOSGeometry  *GEOSConcaveHullOfPolygons_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double lengthRatio,
    unsigned int isTight,
    unsigned int isHolesAllowed);
/** \see GEOSMinimumRotatedRectangle */
extern GEOSGeometry  *GEOSMinimumRotatedRectangle_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSMaximumInscribedCircle */
extern GEOSGeometry  *GEOSMaximumInscribedCircle_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double tolerance);
/** \see GEOSLargestEmptyCircle */
extern GEOSGeometry  *GEOSLargestEmptyCircle_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    const GEOSGeometry* boundary,
    double tolerance);
/** \see GEOSMinimumWidth */
extern GEOSGeometry  *GEOSMinimumWidth_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSMinimumClearanceLine */
extern GEOSGeometry  *GEOSMinimumClearanceLine_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSMinimumClearance */
extern int  GEOSMinimumClearance_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double* distance);
/** \see GEOSDifference */
extern GEOSGeometry  *GEOSDifference_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSDifferencePrec */
extern GEOSGeometry  *GEOSDifferencePrec_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double gridSize);
/** \see GEOSSymDifference */
extern GEOSGeometry  *GEOSSymDifference_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSSymDifferencePrec */
extern GEOSGeometry  *GEOSSymDifferencePrec_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double gridSize);
/** \see GEOSBoundary */
extern GEOSGeometry  *GEOSBoundary_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSUnion */
extern GEOSGeometry  *GEOSUnion_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSUnionPrec */
extern GEOSGeometry  *GEOSUnionPrec_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double gridSize);
/** \see GEOSUnaryUnion */
extern GEOSGeometry  *GEOSUnaryUnion_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSUnaryUnionPrec */
extern GEOSGeometry  *GEOSUnaryUnionPrec_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double gridSize);
/** \see GEOSDisjointSubsetUnion */
extern GEOSGeometry  *GEOSDisjointSubsetUnion_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSPointOnSurface */
extern GEOSGeometry  *GEOSPointOnSurface_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSGetCentroid */
extern GEOSGeometry  *GEOSGetCentroid_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSMinimumBoundingCircle */
extern GEOSGeometry  *GEOSMinimumBoundingCircle_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double* radius,
    GEOSGeometry** center);
/** \see GEOSNode */
extern GEOSGeometry  *GEOSNode_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSClipByRect */
extern GEOSGeometry  *GEOSClipByRect_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double xmin, double ymin,
    double xmax, double ymax);
/** \see GEOSPolygonize */
extern GEOSGeometry  *GEOSPolygonize_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry *const geoms[],
    unsigned int ngeoms);
/** \see GEOSPolygonize_valid */
extern GEOSGeometry  *GEOSPolygonize_valid_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry *const geoms[],
    unsigned int ngems);
/** \see GEOSPolygonizer_getCutEdges */
extern GEOSGeometry  *GEOSPolygonizer_getCutEdges_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry * const geoms[],
    unsigned int ngeoms);
/** \see GEOSPolygonize_full */
extern GEOSGeometry  *GEOSPolygonize_full_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* input,
    GEOSGeometry** cuts,
    GEOSGeometry** dangles,
    GEOSGeometry** invalidRings);
/** \see GEOSBuildArea */
extern GEOSGeometry  *GEOSBuildArea_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSLineMerge */
extern GEOSGeometry  *GEOSLineMerge_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSLineMergeDirected */
extern GEOSGeometry  *GEOSLineMergeDirected_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSLineSubstring */
extern GEOSGeometry  *GEOSLineSubstring_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double start_fraction,
    double end_fdraction);
/** \see GEOSReverse */
extern GEOSGeometry  *GEOSReverse_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSSimplify */
extern GEOSGeometry  *GEOSSimplify_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double tolerance);
/** \see GEOSTopologyPreserveSimplify */
extern GEOSGeometry  *GEOSTopologyPreserveSimplify_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g, double tolerance);
/** \see GEOSGeom_extractUniquePoints */
extern GEOSGeometry  *GEOSGeom_extractUniquePoints_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSSharedPaths */
extern GEOSGeometry  *GEOSSharedPaths_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSSnap */
extern GEOSGeometry  *GEOSSnap_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double tolerance);
/** \see GEOSDelaunayTriangulation */
extern GEOSGeometry  * GEOSDelaunayTriangulation_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry *g,
    double tolerance,
    int onlyEdges);
/** \see GEOSConstrainedDelaunayTriangulation */
extern GEOSGeometry  * GEOSConstrainedDelaunayTriangulation_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry *g);
/** \see GEOSVoronoiDiagram */
extern GEOSGeometry  * GEOSVoronoiDiagram_r(
    GEOSContextHandle_t extHandle,
    const GEOSGeometry *g,
    const GEOSGeometry *env,
    double tolerance,
    int flags);
/** \see GEOSSegmentIntersection */
extern int  GEOSSegmentIntersection_r(
       GEOSContextHandle_t extHandle,
       double ax0, double ay0,
       double ax1, double ay1,
       double bx0, double by0,
       double bx1, double by1,
       double* cx, double* cy);
/* ========= Binary predicates ========= */

/** \see GEOSDisjoint */
extern char  GEOSDisjoint_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSTouches */
extern char  GEOSTouches_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSIntersects */
extern char  GEOSIntersects_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSCrosses */
extern char  GEOSCrosses_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSWithin */
extern char  GEOSWithin_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSContains */
extern char  GEOSContains_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSOverlaps */
extern char  GEOSOverlaps_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSEquals */
extern char  GEOSEquals_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSEqualsExact */
extern char  GEOSEqualsExact_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double tolerance);
/** \see GEOSEqualsIdentical */
extern char  GEOSEqualsIdentical_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSCovers */
extern char  GEOSCovers_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/** \see GEOSCoveredBy */
extern char  GEOSCoveredBy_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
/* ========= Prepared Geometry Binary Predicates ========== */

/** \see GEOSPrepare */
extern const GEOSPreparedGeometry  *GEOSPrepare_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
/** \see GEOSPreparedGeom_destroy */
extern void  GEOSPreparedGeom_destroy_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* g);
/** \see GEOSPreparedContains */
extern char  GEOSPreparedContains_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedContainsXY */
extern char  GEOSPreparedContainsXY_r(
        GEOSContextHandle_t handle,
        const GEOSPreparedGeometry* pg1,
        double x,
        double y);
/** \see GEOSPreparedContainsProperly */
extern char  GEOSPreparedContainsProperly_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedCoveredBy */
extern char  GEOSPreparedCoveredBy_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedCovers */
extern char  GEOSPreparedCovers_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedCrosses */
extern char  GEOSPreparedCrosses_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedDisjoint */
extern char  GEOSPreparedDisjoint_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedIntersects */
extern char  GEOSPreparedIntersects_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedIntersectsXY */
extern char  GEOSPreparedIntersectsXY_r(
        GEOSContextHandle_t handle,
        const GEOSPreparedGeometry* pg1,
        double x,
        double y);
/** \see GEOSPreparedOverlaps */
extern char  GEOSPreparedOverlaps_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedTouches */
extern char  GEOSPreparedTouches_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedWithin */
extern char  GEOSPreparedWithin_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedNearestPoints */
extern GEOSCoordSequence  *GEOSPreparedNearestPoints_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
/** \see GEOSPreparedDistance */
extern int  GEOSPreparedDistance_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2, double *dist);
/** \see GEOSPreparedDistanceWithin */
extern char  GEOSPreparedDistanceWithin_r(
    GEOSContextHandle_t handle,
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2, double dist);