sandbox/geos/fp_geos_c.pas


function GEOSEnvelope_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSIntersection_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSIntersectionPrec_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConvexHull_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConcaveHull_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; ratio: double; allowHoles: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConcaveHullByLength_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; ratio: double; allowHoles: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonHullSimplify_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; isOuter: dword; vertexNumFraction: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonHullSimplifyMode_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; isOuter: dword; parameterMode: dword; parameter: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConcaveHullOfPolygons_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; lengthRatio: double; isTight: dword; isHolesAllowed: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMinimumRotatedRectangle_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMaximumInscribedCircle_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSLargestEmptyCircle_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; boundary: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMinimumWidth_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMinimumClearanceLine_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMinimumClearance_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; distance: Pdouble): longint; cdecl; external libgeos_c;
function GEOSDifference_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSDifferencePrec_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSymDifference_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSymDifferencePrec_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSBoundary_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSUnion_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSUnionPrec_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSUnaryUnion_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSUnaryUnionPrec_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSDisjointSubsetUnion_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPointOnSurface_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGetCentroid_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMinimumBoundingCircle_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; radius: Pdouble; center: PPGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSNode_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSClipByRect_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; xmin: double; ymin: double; xmax: double; ymax: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonize_r(handle: TGEOSContextHandle_t; geoms: PPGEOSGeometry; ngeoms: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonize_valid_r(handle: TGEOSContextHandle_t; geoms: PPGEOSGeometry; ngems: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonizer_getCutEdges_r(handle: TGEOSContextHandle_t; geoms: PPGEOSGeometry; ngeoms: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonize_full_r(handle: TGEOSContextHandle_t; input: PGEOSGeometry; cuts: PPGEOSGeometry; dangles: PPGEOSGeometry; invalidRings: PPGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSBuildArea_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSLineMerge_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSLineMergeDirected_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSLineSubstring_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; start_fraction: double; end_fdraction: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSReverse_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSimplify_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSTopologyPreserveSimplify_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_extractUniquePoints_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSharedPaths_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSnap_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSDelaunayTriangulation_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; tolerance: double; onlyEdges: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConstrainedDelaunayTriangulation_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSVoronoiDiagram_r(extHandle: TGEOSContextHandle_t; g: PGEOSGeometry; env: PGEOSGeometry; tolerance: double; flags: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSegmentIntersection_r(extHandle: TGEOSContextHandle_t; ax0: double; ay0: double; ax1: double; ay1: double;
  bx0: double; by0: double; bx1: double; by1: double; cx: Pdouble;
  cy: Pdouble): longint; cdecl; external libgeos_c;

function GEOSDisjoint_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSTouches_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSIntersects_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSCrosses_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSWithin_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSContains_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSOverlaps_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSEquals_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSEqualsExact_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; tolerance: double): char; cdecl; external libgeos_c;
function GEOSEqualsIdentical_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSCovers_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSCoveredBy_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;

function GEOSPrepare_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSPreparedGeometry; cdecl; external libgeos_c;
procedure GEOSPreparedGeom_destroy_r(handle: TGEOSContextHandle_t; g: PGEOSPreparedGeometry); cdecl; external libgeos_c;
function GEOSPreparedContains_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedContainsXY_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; x: double; y: double): char; cdecl; external libgeos_c;
function GEOSPreparedContainsProperly_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedCoveredBy_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedCovers_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedCrosses_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedDisjoint_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedIntersects_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedIntersectsXY_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; x: double; y: double): char; cdecl; external libgeos_c;
function GEOSPreparedOverlaps_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedTouches_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedWithin_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedNearestPoints_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSPreparedDistance_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSPreparedDistanceWithin_r(handle: TGEOSContextHandle_t; pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry; dist: double): char; cdecl; external libgeos_c;
